--- a/myrottenpotatoes/app/views/layouts/application.html.haml
+++ b/myrottenpotatoes/app/views/layouts/application.html.haml
@@ -7,5 +7,10 @@
     = csrf_meta_tags
 
   %body
-    #main
-      = yield
+  if flash[:notice]
+  #notice.message= flash[:notice]
+  elsif flash[:warning]
+  #warning.message= flash[:warning]
+    
+  #main
+    = yield
